@@ -28,7 +28,7 @@
 #include <gtk/gtkmain.h>
 #include "test_suites.h"
 #include "check_utils.h"
-#include "hildon-get-password-dialog.h"
+#include <hildon/hildon-get-password-dialog.h>
 
 /* -------------------- Fixtures -------------------- */
 
