@@ -26,7 +26,7 @@
 #include <gtk/gtkmain.h>
 #include "test_suites.h"
 #include "check_utils.h"
-#include "hildon.h"
+#include <hildon/hildon.h>
 
 static HildonButton *button = NULL;
 static HildonTouchSelector *selector = NULL;
