@@ -27,8 +27,8 @@
 #include "test_suites.h"
 #include "check_utils.h"
 
-#include "hildon-window.h"
-#include "hildon-time-picker.h"
+#include <hildon/hildon-window.h>
+#include <hildon/hildon-time-picker.h>
 
 /* -------------------- Fixtures -------------------- */
 
