@@ -32,7 +32,7 @@
 #include "test_suites.h"
 #include "check_utils.h"
 
-#include "hildon-window.h"
+#include <hildon/hildon-window.h>
 
 
 /* -------------------- Fixtures -------------------- */
